--- a/portifolio-main/assets/css/style.css
+++ b/portifolio-main/assets/css/style.css
@@ -27,11 +27,33 @@ header{
     flex-direction: column;
     align-items: flex-start;
     gap: 2rem;
-    background-image: url("../images/hero.jpg");
-    height: 100vh;
-    background-size: cover;
     padding-top: 30rem;
     padding-left: 6rem;
+    height: 100vh;
+    overflow: hidden;
+    position: relative;
+}
+
+header::before{
+    content:'';
+    width: 100%;
+    height: 100%;
+    background-image: url("../images/hero.jpg");
+    background-size: cover;
+    position: absolute;
+    top:0px;
+    left: 0px;
+    z-index: -1;
+    animation: zoom 5s ease-in-out;
+}
+
+@keyframes zoom {
+    0%{
+        transform: scale(1.5);
+    }
+    100%{
+        transform: scale(1);
+    }
 }
 
 h1{
@@ -47,13 +69,18 @@ span{
 
 .button{
     background:linear-gradient(90deg, #C33764, #1D2671);
-    padding: 0.5rem 1.5rem;
+    padding: 0.75rem 1.75rem;
     border-radius: 3.5px;
     color: #fff;
-    font-size: 1rem;
+    font-size: 1.3rem;
     font-family: var(--font-default);
     text-decoration: none;
 }
+
+.button:hover{
+    transform: scale(1.05);
+    box-shadow: 0 0 20px #1D2671;
+} 
 
 img.avatar{
     border-radius: 50%;
@@ -69,5 +96,6 @@ img.avatar{
 .section-presentation div{
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
+    justify-content: space-around;
 }
