--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -99,3 +99,42 @@ img.avatar{
     align-items: center;
     justify-content: space-around;
 }
+
+#section-projects{
+    background-color: #212121;
+}
+
+#section-projects ul{
+    display: flex;
+    justify-content: space-around;
+    gap: 4rem;
+    margin-top: 2rem;
+}
+
+#section-projects li{
+    list-style: none;
+    position: relative;
+    cursor: pointer;
+}
+
+.card-image img{
+    width: 300px;
+    height: 400px;
+    border-radius: 10px;
+}
+
+.card-info{
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    bottom: 0;
+    opacity: 0;
+    transition: opacity .5s, bottom .5s;
+}
+
+#section-projects li:hover .card-info{
+    opacity: 1;
+    bottom: 20%
+}
+
+
