--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,6 +20,7 @@ html{
 body{
     font-family: var(--font-default);
     color: var(--text-primary);
+    background-color: #05152F;
 }
 
 header{
@@ -84,13 +85,15 @@ span{
 
 img.avatar{
     border-radius: 50%;
+    width: 20%;
 }
 
 .section-presentation{
     display: flex;
-    color:var(--text-secudary);
+    color:var(--text-primary);
     gap: 2rem;
-
+    margin-top: 1.5rem;
+    background-color: #05152F;
 }
 
 .section-presentation div{
@@ -101,7 +104,8 @@ img.avatar{
 }
 
 #section-projects{
-    background-color: #212121;
+    background-color: #05152F;
+    gap: 2rem;
 }
 
 #section-projects ul{
@@ -126,7 +130,9 @@ img.avatar{
 .card-info{
     display: flex;
     flex-direction: column;
+    align-items: flex-start;
     position: absolute;
+    left: 1rem;
     bottom: 0;
     opacity: 0;
     transition: opacity .5s, bottom .5s;
@@ -134,7 +140,13 @@ img.avatar{
 
 #section-projects li:hover .card-info{
     opacity: 1;
-    bottom: 20%
+    bottom: 7%
 }
 
-
+h3{
+    display: flex;
+    flex-direction: column;
+    font-size: 2.5rem;
+    margin-top: 1.5rem;
+    align-items: center;
+}
