--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,7 +85,7 @@ span{
 
 img.avatar{
     border-radius: 50%;
-    width: 20%;
+    width: 15%;
 }
 
 .section-presentation{
@@ -143,10 +143,45 @@ img.avatar{
     bottom: 7%
 }
 
-h3{
+#section-projects h2{
     display: flex;
     flex-direction: column;
     font-size: 2.5rem;
     margin-top: 1.5rem;
     align-items: center;
+}
+
+
+#section-budget{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background-image: url();
+    background-size: cover;
+}
+
+#section-budget form{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    justify-items: start;
+    column-gap: 1rem;
+    row-gap: 1rem;
+    background-color: #8c8c8c99;
+    backdrop-filter: blur(1px);
+    border-radius: 10px;
+    width: 80%;
+    padding: 2rem;
+}
+
+#section-budget form h4{
+    position: absolute;
+    top: -15%;
+    background-color: #C33764;
+    padding: .3rem .2rem;
+    border-radius: 5px;
+}
+
+#section-budget form output{
+    grid-column: 2;
 }
