--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,6 +23,27 @@ body{
     background-color: #05152F;
 }
 
+#hamburger{
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    height: 3rem;
+    width: 3rem;
+    position: fixed;
+    top: 2rem;
+    right: 2rem;
+    z-index: 10;
+    cursor: pointer;
+}
+
+#hamburger .linha{
+    width: 100%;
+    height: .5rem;
+    background-color: #ffffff;
+    box-shadow: .2rem .2rem #000;
+    border-radius: .5rem .2rem;
+}
+
 header{
     display: flex;
     flex-direction: column;
