--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,6 +23,7 @@ body{
     background-color: #05152F;
 }
 
+
 #hamburger{
     display: flex;
     justify-content: space-between;
@@ -32,9 +33,11 @@ body{
     position: fixed;
     top: 2rem;
     right: 2rem;
-    z-index: 10;
     cursor: pointer;
+    z-index: 11;
 }
+
+
 
 #hamburger .linha{
     width: 100%;
@@ -42,6 +45,38 @@ body{
     background-color: #ffffff;
     box-shadow: .2rem .2rem #000;
     border-radius: .5rem .2rem;
+}
+
+nav ul{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+    position: fixed;
+    right: -20rem;
+    background-color: #fff;
+    height: 100vh;
+    width: 20rem;
+    z-index: 10;
+    transition: 1s;
+}
+
+#menu li{
+    list-style: none;    
+}
+
+#menu a{
+    text-decoration: none;
+    color: var(--text-secudary);
+}
+
+#menu a:hover{
+    color: #C33764;
+}
+
+.menu-show{
+    right: 0;
 }
 
 header{
