--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,10 +41,10 @@ body{
 
 #hamburger .linha{
     width: 100%;
-    height: .5rem;
+    height: .4rem;
     background-color: #ffffff;
-    box-shadow: .2rem .2rem #000;
-    border-radius: .5rem .2rem;
+    box-shadow: .1rem .1rem rgb(51, 51, 51);
+    border-radius: .4rem;
 }
 
 nav ul{
@@ -54,8 +54,8 @@ nav ul{
     align-items: center;
     gap: 1rem;
     position: fixed;
-    right: -20rem;
-    background-color: #fff;
+    right: 0rem;
+    background-color: #19205f;
     height: 100vh;
     width: 20rem;
     z-index: 10;
@@ -68,15 +68,15 @@ nav ul{
 
 #menu a{
     text-decoration: none;
-    color: var(--text-secudary);
+    color: var(--text-primary);
 }
 
 #menu a:hover{
-    color: #C33764;
+    color: #fd2e70;
 }
 
 .menu-show{
-    right: 0;
+    right: -20rem;
 }
 
 header{
